feat: hora colombiana, apertura mercado, CI/CD Render+Netlify
- Mostrar hora de apertura del mercado (nextOpen) en preview y confirmación de órdenes
- Cambiar todas las fechas mostradas a hora colombiana (America/Bogota)
- Agregar CORS configurable via APP_CORS_ALLOWED_ORIGINS
- Agregar pipeline CI/CD para Netlify (frontend) y Render (backend)
- Agregar pipeline CI/CD local con ngrok y self-hosted runner
- Agregar docker-compose.prod.yml con nginx + docker-compose.test.yml
- Agregar render.yaml Blueprint para despliegue en Render
- Actualizar .gitignore para excluir target/ y artefactos compilados

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>